--- a/src/public/sass/_variables.scss
+++ b/src/public/sass/_variables.scss
@@ -3,7 +3,8 @@ $dark-green: hsl(162, 88%, 30%);
 $medium-green: hsl(162, 73%, 46%);
 $red: hsl(342, 63%, 46%);
 $text-color: hsl(210, 11%, 15%);
-$gray: hsl(210, 7%, 56%);
+$gray: hsl(210, 7%, 35%);
+$medium-gray: hsl(210, 12%, 57%);
 $light-gray: hsl(210, 17%, 95%);
 $extra-light-gray: hsl(210, 17%, 98%);
 $white: hsl(0, 0%, 100%);
