--- a/src/views/400.handlebars
+++ b/src/views/400.handlebars
@@ -5,5 +5,9 @@
             <input type="url" id="shorten_url" name="url" maxlength="255" placeholder="Shorten your link" required>
             <input class="button button--cta" type="submit" value="Shorten">
         </form>
+        <div class="center">
+            <h3 class="error">400 - Bad Request</h3>
+            <p>Input is not valid. Please ensure URL has proper structure.</p>
+        </div>
     </div>
 </div>
