--- a/src/views/404.handlebars
+++ b/src/views/404.handlebars
@@ -1,1 +1,8 @@
-<h1>404 - Resource Not Found</h1>
+<div class="tile-row">
+    <div class="tile">
+        <div class="center">
+            <h3 class="error">404 - Resource Not Found</h3>
+        </div>
+    </div>
+</div>
+
