--- a/src/views/500.handlebars
+++ b/src/views/500.handlebars
@@ -1,1 +1,8 @@
-<h1>500 - Server Error</h1>
+<div class="tile-row">
+    <div class="tile">
+        <div class="center">
+            <h3 class="error">500 - Server Error</h3>
+        </div>
+    </div>
+</div>
+
