--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -25,8 +25,14 @@ h4 {
   letter-spacing: 0.03em;
 }
 
+input, textarea, button {
+  font-family: inherit;
+  letter-spacing: inherit;
+  line-height: inherit;
+}
+
 a {
-  color: #20cb98;
+  color: #076448;
 }
 
 a:visited {
@@ -34,7 +40,7 @@ a:visited {
 }
 
 a:hover {
-  color: #076448;
+  color: #20cb98;
 }
 
 a:active {
@@ -42,6 +48,10 @@ a:active {
 }
 
 .nav-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   background-color: #20cb98;
 }
 
@@ -51,7 +61,7 @@ a:active {
   align-items: flex-end;
   max-width: 1080px;
   margin: 0 auto;
-  padding: 0.625em;
+  padding: 0.875em 0.625em;
 }
 
 .home-link {
@@ -63,8 +73,32 @@ a:active {
   text-decoration: none;
 }
 
-.top-nav {
+.home-link:visited {
+  color: #22262a;
+}
+
+.home-link:hover {
+  color: #099067;
+}
+
+.stacked-div {
   display: flex;
+}
+
+.stacked-div > * + * {
+  margin-left: 1.25em;
+}
+
+.stacked-div > a {
+  display: flex;
+  align-items: center;
+}
+
+.stacked-div > a:hover {
+  transform: scale(1.2);
+}
+
+.top-nav {
   list-style-type: none;
   margin: 0;
 }
@@ -76,17 +110,19 @@ a:active {
 .top-nav a {
   display: block;
   font-size: 0.8rem;
-  padding: 0.3rem 1.25rem;
-  color: white;
-  background: #076448;
+  padding: 0.375rem 1rem;
+  background: white;
+  color: #076448;
+  border: 2px solid #076448;
+  border-radius: 0.5em;
   text-decoration: none;
-  border-radius: 3px;
-  text-transform: uppercase;
+  text-transform: initial;
   letter-spacing: 0.03em;
 }
 
 .top-nav a:hover {
   background-color: #099067;
+  color: white;
 }
 
 .top-nav__featured > a {
@@ -97,4 +133,253 @@ a:active {
 .top-nav__featured > a:hover {
   color: #20cb98;
   background-color: white;
+}
+
+.hero {
+  background: url(../images/furnished_room.jpg) no-repeat 50% 37%;
+  background-size: cover;
+  margin-bottom: 1.25rem;
+}
+
+.hero__inner {
+  max-width: 1080px;
+  margin: 0 auto;
+  padding: 7.5625em 12.625em 12.625em 0;
+  text-align: right;
+}
+
+.hero h2 {
+  font-size: 1.95rem;
+  letter-spacing: -0.02em;
+  margin-top: 0;
+  margin-bottom: 0.125rem;
+}
+
+.hero h5 {
+  margin: 0;
+  font-weight: 300;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1080px;
+}
+
+.container > small {
+  display: block;
+  font-size: 0.75em;
+  text-align: center;
+  font-style: italic;
+  margin: 1.25em 10%;
+}
+
+.tile-row {
+  display: flex;
+  margin-bottom: 5rem;
+}
+
+.tile-row > * {
+  flex: 1;
+}
+
+.tile-row > * + * {
+  margin-left: 1.5625em;
+}
+
+.tile {
+  background-color: white;
+  border-radius: 0.3em;
+  padding: 1.5625em;
+}
+
+.tile > * + * {
+  margin-top: 2em;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 42%;
+  min-width: 42%;
+}
+
+.card__top {
+  margin: 0.25em;
+}
+
+.card__top > a {
+  font-size: 1.0625em;
+  font-weight: bold;
+}
+
+.card__top > cite {
+  font-size: 0.75em;
+}
+
+.card__top > cite > a {
+  color: inherit;
+  text-decoration: none;
+  word-break: break-all;
+}
+
+.card__top > * + * {
+  display: inline-block;
+  margin-bottom: 0.5em;
+}
+
+.card__bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: 0.5em 0.25em 0.25em;
+}
+
+.card__bottom > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card__bottom > div > strong {
+  font-size: 1.0625em;
+  font-weight: bold;
+  color: #53595f;
+}
+
+.card__bottom > div > small {
+  color: #84919f;
+}
+
+.center {
+  text-align: center;
+}
+
+.error {
+  font-family: Roboto, sans-serif;
+  font-size: 1.25em;
+  color: #bf2b58;
+  text-decoration: underline;
+}
+
+form {
+  display: flex;
+}
+
+form > input + input {
+  margin-left: 1.5em;
+}
+
+label {
+  display: none;
+}
+
+form > input {
+  padding-top: 1em;
+  padding-bottom: 1em;
+  border-radius: 0.5em;
+}
+
+input[type=url] {
+  font-size: 1.25em;
+  padding-left: 1em;
+  flex: 1;
+}
+
+input[type=submit] {
+  font-size: 1.25em;
+  flex-basis: 20%;
+}
+
+p {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+.button {
+  display: inline-block;
+  padding: 0.4em 1em;
+  color: #076448;
+  border: 2px solid #076448;
+  border-radius: 0.5em;
+  text-decoration: none;
+  font-size: 0.8rem;
+}
+
+.button:hover {
+  background-color: #099067;
+  color: white;
+}
+
+.button--cta {
+  padding: 0.6em 1em;
+  background-color: #076448;
+  color: white;
+  border: none;
+}
+
+.page-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  margin-top: 3em;
+  padding: 1em 0;
+  background-color: #f0f2f4;
+  color: #53595f;
+}
+
+.page-footer__inner {
+  margin: 0 auto;
+  max-width: 1080px;
+  text-align: center;
+  font-size: 0.8rem;
+}
+
+table {
+  width: 100%;
+  margin-top: 2.5rem;
+  font-family: Helvetica, sans-serif;
+  border-collapse: collapse;
+}
+
+th {
+  color: #076448;
+  text-align: left;
+}
+
+td {
+  color: #53595f;
+  max-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+table, th, td {
+  padding: 1.25em 0.75em;
+  border-bottom: solid #f0f2f4 1px;
+}
+
+td > a {
+  color: #53595f !important;
+}
+
+.column_a {
+  width: 33%;
+}
+
+.column_b {
+  width: 50%;
+}
+
+.column_c {
+  width: 15%;
+  min-width: 9.375em;
+}
+
+.column_d {
+  width: 5%;
+  min-width: 4em;
 }
