--- a/src/public/sass/_header.scss
+++ b/src/public/sass/_header.scss
@@ -1,6 +1,10 @@
 @use 'variables' as var;
 
 .nav-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   background-color: var.$medium-green;
 }
 
@@ -10,7 +14,7 @@
   align-items: flex-end;
   max-width: 1080px;
   margin: 0 auto;
-  padding: 0.625em;
+  padding: 0.875em 0.625em;
 }
 
 .home-link {
@@ -22,8 +26,32 @@
   text-decoration: none;
 }
 
-.top-nav {
+.home-link:visited {
+  color: var.$text-color;
+}
+
+.home-link:hover {
+  color: var.$dark-green;
+}
+
+.stacked-div {
   display: flex;
+}
+
+.stacked-div > * + * {
+  margin-left: 1.25em;
+}
+
+.stacked-div > a {
+  display: flex;
+  align-items: center;
+}
+
+.stacked-div > a:hover {
+  transform: scale(1.2);
+}
+
+.top-nav {
   list-style-type: none;
   margin: 0;
 }
@@ -35,17 +63,19 @@
 .top-nav a {
   display: block;
   font-size: 0.8rem;
-  padding: 0.3rem 1.25rem;
-  color: var.$white;
-  background: var.$brand-green;
+  padding: 0.375rem 1rem;
+  background: var.$white;
+  color: var.$brand-green;
+  border: 2px solid var.$brand-green;
+  border-radius: 0.5em;
   text-decoration: none;
-  border-radius: 3px;
-  text-transform: uppercase;
+  text-transform: initial;
   letter-spacing: 0.03em;
 }
 
 .top-nav a:hover {
   background-color: var.$dark-green;
+  color: var.$white;
 }
 
 .top-nav__featured > a {
