--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,10 +1,11 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <title>shortURL</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&family=Sansita:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&family=Sansita:wght@800&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
@@ -30,12 +31,16 @@
 </div>
 
 <div class="container">
-    <small>This is NOT a production website. Shortened links are temporary and are removed following 24 hours of inactivity. </small>
+    <small>This is NOT a production website. Shortened links are temporary and are removed following 24 hours of
+        inactivity. </small>
     {{{body}}}
 </div>
 
 <footer class="page-footer">
-    <div class="page-footer__inner">MIT license &copy; 2021; photo by <a href="https://unsplash.com/@nathanfertig?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nathan Fertig</a> on <a href="https://unsplash.com/photos/FV3GConVSss?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+    <div class="page-footer__inner">MIT license &copy; 2021; photo by <a
+            href="https://unsplash.com/@nathanfertig?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nathan
+        Fertig</a> on <a
+            href="https://unsplash.com/photos/FV3GConVSss?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
     </div>
 </footer>
 </body>
