Change website name to heroku dyno and update CSS; remove unnecessary jest setup

--- a/src/public/sass/_main.scss
+++ b/src/public/sass/_main.scss
@@ -41,8 +41,8 @@
   flex-direction: column;
   justify-content: space-between;
   margin: 0 auto;
-  width: 42%;
-  min-width: 42%;
+  width: 38em;
+  min-width: 38em;
 }
 
 .card__top {
