--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
 <div class="hero">
     <div class="hero__inner">
         <h2>Show that link who's boss</h2>
-        <h5>no guarantees it will be shorter.</h5>
+        <h5>but no guarantees it will be shorter.</h5>
     </div>
 </div>
 
