--- a/src/views/record.handlebars
+++ b/src/views/record.handlebars
@@ -3,7 +3,7 @@
         <div class="card">
             <div class="card__top">
                 <h2>Record</h2>
-                <a href="/{{record.hash}}">shorturl.dev/{{record.hash}}</a>
+                <a href="/{{record.hash}}">kraftjs-url-shortener.herokuapp.com/{{record.hash}}</a>
                 <cite><a href="{{record.url}}">{{record.url}}</a></cite>
             </div>
             <div class="card__bottom">
